@@ -68,7 +68,7 @@
 <body>
     <div id="snow" data-count="200"></div>
     <h1 class="centered">Welcome to the No Name Games External Launcher!</h1>
-    <h3 class="centered">Last update: 04/15/2025. <a href="javascript:openchangelog()">View changelog</a></h3>
+    <h3 class="centered">Last update: 04/16/2025. <a href="javascript:openchangelog()">View changelog</a></h3>
     <center>
         <label for="currentabstyle">Launcher Tab Style</label>
         <select name="tabstyle" id="currenttabstyle"></select>
@@ -175,7 +175,7 @@
             "Run 1": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/other/credgames/run1.xml",
             "Run 2": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/other/credgames/run2.xml",
             "Granny": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/Granny/granny3.xml",
-            "Bad Ice Cream": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/other/badicecream/badicecream3.xml",
+            "Bad Ice Cream": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/other/badicecream/badicecream4.xml",
             "(AI HOMEWORK SOLVER) Edubrain.ai": "NOTXML;https://edubrain.ai/" 
         }
 
