@@ -20,6 +20,9 @@ people who don't  have a clue  what they're doing and use ChatGPT to  "code"
 their infrastructure. No Name Games has and will stay on top of the competi-
 tion.
 ==================================CHANGELOG=================================
+04/16/2025:
+[+] Swapped Bad Ice Cream from Ruffle to waflash, making it less laggy.
+
 04/15/2025:
 [+] Added edubrain.ai
 [+] Fixed "Roblox Obby"
